django_codenerix_email (4.0.31) stable; urgency=medium

  * Several improvements on type checking

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 29 Sep 2025 08:36:00 +0200


django_codenerix_email (4.0.30) stable; urgency=medium

  * Added support to receive emails throught IMAP, analize bounces and relate with sent emails

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Fri, 26 Sep 2025 06:37:00 +0200


django_codenerix_email (4.0.29) stable; urgency=medium

  * Added subject to the template listing

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 04 Aug 2025 07:59:00 +0200


django_codenerix_email (4.0.28) stable; urgency=medium

  * Support self Message-ID when no other is indicated

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 28 Jul 2025 11:01:00 +0200


django_codenerix_email (4.0.27) stable; urgency=medium

  * Support for manage.py command "test_email" which now support extra arguments to improve testing

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 12 May 2025 11:57:00 +0200


django_codenerix_email (4.0.26) stable; urgency=medium

  * Reversed the list of Email Templates

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 31 Jan 2025 09:28:00 +0200


django_codenerix_email (4.0.25) stable; urgency=medium

  * Test email script corrected

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 30 Dec 2024 06:59:00 +0200


django_codenerix_email (4.0.24) stable; urgency=medium

  * Updated package naming to compliant with PEP625

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 23 Dec 2024 11:09:00 +0200


django-codenerix-email (4.0.23) stable; urgency=medium

  * Translations

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 21 Oct 2024 08:36:00 +0200


django-codenerix-email (4.0.22) stable; urgency=medium

  * Not to confuse the user, the default ordering for EmailMessages is now "-created"

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 15 Oct 2024 10:56:00 +0200


django-codenerix-email (4.0.21) stable; urgency=medium
