@@ -1,3 +1,10 @@
+django_codenerix_email (4.0.32) stable; urgency=medium
+
+  * Added details modal window for sent and received emails
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 29 Sep 2025 08:54:00 +0200
+
+
 django_codenerix_email (4.0.31) stable; urgency=medium
 
   * Several improvements on type checking
